@@ -1,3 +1,10 @@
+2006-07-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/pygflags.c (pyg_flags_add): idem.
+
+	* gobject/pygenum.c (pyg_enum_add): Give a more explicit error
+	message when the gtype is not an enum.
+
 2006-07-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gobject/pygobject.h (init_pygobject_check): Add a macro to easily 
